<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AGM</string>

    <!-- application -->
    <string name="main_activity_label">Sprint</string>
    <string name="task_activity_label">Task</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_new">New</string>
    <string name="et_account_hint">Email address</string>
    <string name="et_password_hint">Password</string>
    <string name="login">Sign in</string>
    <string name="register">Register</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_change_user">Change user</string>
    <string name="app_exit_user">sign out</string>
    <string name="cnews">Message</string>
    <string name="call">Phone</string>
    <string name="user_time">User time</string>
    <string name="user_name">User name</string>
    <string name="user_feel">User feel</string>
    <string name="pop_chat">pop chat</string>
    <string name="pop_sangzhao">pop sangzhao</string>
    <string name="pop_camera">pop camera</string>
    <string name="pop_scan">pop scan</string>
    <string name="group">group</string>
    <string name="all">all</string>
    <string name="no_data">No data</string>

    <!-- Refresh -->
    <string name="p2refresh_head_load_more">Load more</string>
    <string name="p2refresh_end_load_more">More</string>
    <string name="p2refresh_end_click_load_more">Click to load</string>
    <string name="p2refresh_release_refresh">Release to refresh</string>
    <string name="p2refresh_pull_to_refresh">pull down to refresh</string>
    <string name="p2refresh_doing_head_refresh">Refreshing&#8230;</string>
    <string name="p2refresh_doing_end_refresh">Loading&#8230;</string>
    <string name="p2refresh_refresh_lasttime">Last modified&#160;&#058;&#160;</string>

    <string name="recentchat">最近聊天</string>
    <string name="choose_constact">选择联系人</string>
    <string name="search">请输入关键字</string>
    <string name="dynamic">动态</string>
    <string name="mime">我</string>
    <string name="tv_newfriend">新朋友</string>
    <string name="tv_tongxunlu">通讯录</string>
    <string name="tv_friend">QQ好友</string>
    <string name="tv_search">搜索</string>
    <string name="tv_loading">"   Loading..."</string>

    <!-- story -->
    <string name="story_status">Status</string>
    <string name="story_name">Name</string>
    <string name="story_owner">Owner</string>
    <string name="story_point">Point</string>
    <string name="story_description">Description</string>
    <string name="story_task">Task</string>
    <string name="story_comments">Comments</string>
    <string name="story_label_release">Release</string>
    <string name="story_release">Release</string>
    <string name="story_label_sprint">Sprint</string>
    <string name="story_sprint">Sprint</string>
    <string name="story_label_point">Point</string>

    <!-- new task -->
    <string name="new_task_backlog_item">Backlog item</string>
    <string name="new_task_description">Description</string>
    <string name="new_task_assignee">Assignee</string>
    <string name="new_task_estimated">Estimated(Hours)</string>




    <!-- tab -->
    <string name="story_detail">Detail</string>

    <string name="story_attachment">Attachment</string>

    <!-- tab -->
    <string name="tab_story">Spring</string>
    <string name="tab_task">Task</string>
    <string name="tab_backlog">Backlog</string>

    <!-- release backlog item -->
    <string name="rbi_owner">Owner</string>
    <string name="rbi_status">Status</string>
    <string name="rbi_name">Name</string>
    <string name="rbi_point">Point</string>

    <!-- tasks -->
    <string name="task_estimated">Estimated</string>
    <string name="task_remaining">Remaining</string>
    <string name="task_invested">Invested</string>
    <string name="task_name">Name</string>
    <string name="task_description">Description</string>
    <string name="task_assigned">Assigned</string>
    <string name="task_status">Status</string>

    <!-- task detail -->
    <string name="task_detail_status_label">Status</string>
    <string name="task_detail_description_label">Description</string>
    <string name="task_detail_estimated_label">Estimated</string>
    <string name="task_detail_invested_label">Invested</string>
    <string name="task_detail_remaining_label">Remaining</string>
    <string name="task_detail_assignee_label">Assignee</string>

    <!-- spinner prompt -->
    <string name="spinner_prompt_sprint">Current Sprint</string>
    <string name="spinner_prompt_owner">All Stories</string>
    <string name="spinner_prompt_status">All Status</string>
</resources>
