<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="59dp"
            android:background="@drawable/nav_bar"
            android:orientation="vertical"
            android:padding="0dp" >

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical" >

            <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:gravity="center" >

                <TextView
                        android:id="@+id/story_detail_tab"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/story_detail"
                        android:textColor="#969696"
                        android:textSize="17dp" />

                <TextView
                        android:id="@+id/story_task_tab"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="#969696"
                        android:text="@string/story_task"
                        android:textSize="17dp" />

                <TextView
                        android:id="@+id/story_attachment_tab"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/story_attachment"
                        android:textColor="#969696"
                        android:textSize="17dp" />
            </LinearLayout>

            <ImageView
                    android:id="@+id/cursor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@drawable/nav_bar_focus"
                    android:contentDescription="@string/app_name"
                    android:gravity="left"
                    android:src="@drawable/nav_bar_focus" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/page_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
</LinearLayout>